[build-system]
requires = ["setuptools>=61.2", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perfact-zodbsync"
authors = [
    {name="Ján Jockusch", email="jan.jockusch@perfact.de"},
    {name="Viktor Dick", email="viktor.dick@perfact.de"},
]
description = "Synchronize ZODB objects with a file system structure"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Framework :: Zope",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "filelock",
    "ZODB",
    "Zope",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/perfact/zodbsync"

[project.scripts]
perfact-zoperecord = "perfact.zodbsync.scripts:zoperecord"
perfact-zopeplayback = "perfact.zodbsync.scripts:zopeplayback"
zodbsync = "perfact.zodbsync.scripts:zodbsync"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]
